src/test/resources/invalid/numeric/computational/COMP-2INVFMT.cpy
           10 EMP-SALARY PIC AA COMP-2.